# himmel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
demo-binaries/: build.sh
docs/: README.md  app.js  app.js.backup  himmel.js  himmel_bg.wasm  index.html
docs/assets/: main-pFtopsgG.js
docs/demo-binaries/: README.md
docs/demo-binaries/src/: counter.rs  fibonacci.c  hello.c
src/: lib.rs  main.rs
web-src/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-src/src/: demo-section.ts  himmel-app.ts  index.html  main.ts  results-renderer.ts  types.ts  upload-section.ts  wasm.d.ts
