[package]
name = "himmel"
version = "0.1.0"
edition = "2021"
description = "Rust CLI tool for analyzing ELF and coredump files using DWARF info. WebAssembly-ready."
license = "MIT"
authors = ["wipeseals"]
repository = "https://github.com/wipeseals/himmel"

[dependencies]
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "himmel"
path = "src/lib.rs"

[[bin]]
name = "himmel"
path = "src/main.rs"