[package]
name = "himmel"
version = "0.1.0"
edition = "2021"
description = "Rust CLI tool for analyzing ELF files using DWARF info. WebAssembly-ready."
license = "MIT"
authors = ["wipeseals"]
repository = "https://github.com/wipeseals/himmel"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
gimli = "0.29"
object = "0.36"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "himmel"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "himmel"
path = "src/main.rs"